# rich-toolkit

./: CHANGELOG.md  CROSS_DOCS_ANALYSIS.md  CROSS_DOCS_ARCHITECTURE.md  CROSS_DOCS_INTEGRATION_GUIDE.md  EXPLORATION_SUMMARY.md  INDEX.md  QUICK_SUMMARY.txt  README_CROSS_DOCS_EXPLORATION.md  RELEASE.md  a.py  e.py  flake.nix  l.py  log.txt  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: x4q645hy59gwvwpawinmzfd4sbd17ynp-source
.github/workflows/: pr.yml  release.yml  test.yml
examples/: app.py  create-astro.py  create-strawberry.py  deploy-json.py  end.py  fastapi-new.py  filterable-menu.py  forms.py  inputs.py  just-components.py  laravel-new.py  list-output.py  menu.py  output-renderer.py  preserve_progress_logs.py  progress_cancelled.py  progress_log.py  streaming-output.py  wrap.py
examples/demos/: basic_usage.py  bordered_style.py  (+3 more)
scripts/: build_examples.py  build_examples_subprocess.py  build_examples_vhs.py
tests/: test_app.py  test_input_validator.py  test_json_output.py  test_menu.py  test_metadata.py  test_progress_cancelled.py  test_render_input_value.py  test_tagged_style.py  test_toolkit.py  typecheck_output_renderers.py
website/: main.py  package.json  pyproject.toml  tailwind.config.js  vite.config.ts
website/content/docs/: getting-started.md
website/content/examples/: bordered_style.html  menu_example.html
website/frontend/: CustomHomePage.tsx  TerminalExample.tsx  app.tsx  styles.css
website/templates/: app.html
(+31 files in other folders)
